--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
     "bootstrap": "~3.3.1",
     "jquery-cookie": "~1.4.1",
     "angular-resource": "~1.3.6",
-    "ionicons": "~2.0.1"
+    "ionicons": "~2.0.1",
+    "ngDialog": "~0.3.9",
+    "google-code-prettify": "~1.0.3",
+    "ngmap": "~1.3.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
