--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "simpleapp",
-  "version": "0.0.0",
+  "name": "popa",
+  "version": "0.0.0-2",
+  "subdomain": "johnhof",
+  "scripts": {
+    "start": "grunt app"
+  },
   "dependencies": {
     "angular-resource": "^1.3.6",
     "async": "~0.9.0",
