--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
   "name": "popa",
-  "version": "0.0.0-2",
+  "version": "0.0.0-12",
   "subdomain": "johnhof",
   "scripts": {
-    "start": "grunt app"
+    "predeploy": "bower install",
+    "start": "node node_modules/grunt-cli/bin/grunt app"
   },
   "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "~0.1.11",
     "angular-resource": "^1.3.6",
-    "async": "~0.9.0",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "~1.9.3",
-    "cheerio": "~0.18.0",
     "colors": "~1.0.3",
     "connect": "~3.3.3",
-    "connect-prism": "^0.7.5",
-    "cookie-parser": "~1.3.3",
-    "express": "~4.10.4",
-    "express-json": "~1.0.0",
-    "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-concat-in-order": "^0.1.6",
     "grunt-concurrent": "^0.5.0",
-    "grunt-connect-prism": "^0.7.6",
-    "grunt-connect-proxy": "^0.1.11",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-concat": "^0.4.0",
@@ -36,7 +28,6 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
     "grunt-google-cdn": "^0.4.0",
-    "grunt-mocha": "^0.4.11",
     "grunt-newer": "^0.7.0",
     "grunt-ngmin": "^0.0.3",
     "grunt-shell-spawn": "~0.3.0",
@@ -49,14 +40,7 @@
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
     "lodash": "~2.4.1",
-    "mocha": "~2.0.1",
-    "mongoose": "~3.8.19",
-    "mongoose-validator": "~1.0.2",
-    "qs": "^2.3.3",
-    "request": "~2.49.0",
-    "should": "~3.3.1",
-    "time-grunt": "^0.3.1",
-    "url": "~0.10.1"
+    "time-grunt": "^0.3.1"
   },
   "engines": {
     "node": ">=0.10.0"
