--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "popa",
-  "version": "0.0.0-21",
+  "version": "0.0.0-25",
   "subdomain": "johnhof",
   "scripts": {
     "start": "node server.js"
@@ -8,9 +8,10 @@
   "dependencies": {
     "angular-resource": "^1.3.6",
     "colors": "~1.0.3",
-    "config.json": "0.0.3",
+    "config.json": "0.0.x",
     "connect": "~3.3.3",
     "express": "^4.11.0",
+    "fs": "0.0.2",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-cli": "~0.1.11",
