--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "popa",
-  "version": "0.0.0-25",
+  "version": "0.0.1-1",
   "subdomain": "johnhof",
+  "domains": [
+    "johnhofrichter.com",
+    "www.johnhofrichter.com"
+  ],
   "scripts": {
-    "start": "node server.js"
+    "start": "node server"
   },
   "dependencies": {
     "angular-resource": "^1.3.6",
+    "body-parser": "^1.10.2",
     "colors": "~1.0.3",
     "config.json": "0.0.x",
     "connect": "~3.3.3",
     "express": "^4.11.0",
+    "express-json": "^1.0.0",
     "fs": "0.0.2",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.3",
@@ -40,6 +46,7 @@
     "grunt-wiredep": "1.8.x",
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
+    "lodash": "^3.0.0",
     "time-grunt": "^0.3.1"
   },
   "engines": {
