--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "angular-resource": "^1.3.6",
+    "async": "^0.9.0",
     "body-parser": "^1.10.2",
     "colors": "~1.0.3",
     "config.json": "0.0.x",
@@ -44,9 +45,11 @@
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "1.8.x",
+    "joi": "^5.1.0",
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
     "lodash": "^3.0.0",
+    "request": "^2.51.0",
     "time-grunt": "^0.3.1"
   },
   "engines": {
