added some github api functionality. added merkdown printing in documentation route

--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
     "/scripts" : "/dist/scripts",
     "/styles"  : "/dist/styles",
     "/views"   : "/dist/views",
-    "/favicon"  : "/favicon",
+    "/favicon.ico"  : "/dist/favicon.ico",
     "/bower_components" : "/bower_components"
   }
 }
