--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "ionicons": "~2.0.1",
     "ngDialog": "~0.3.9",
     "google-code-prettify": "~1.0.3",
-    "ngmap": "~1.3.1"
+    "ngmap": "~1.3.1",
+    "angular-marked": "~0.0.12"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
