--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
     "lodash": "^3.0.0",
+    "mongoman": "0.0.2",
     "request": "^2.51.0",
     "time-grunt": "^0.3.1"
   },
