--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "load-grunt-tasks": "^0.4.0",
     "lodash": "^3.0.0",
     "mongoman": "0.0.2",
+    "nodemailer": "^1.3.0",
     "request": "^2.51.0",
     "time-grunt": "^0.3.1"
   },
