--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "popa",
-  "version": "0.0.1-3",
+  "version": "0.2.1",
   "subdomain": "johnhof",
   "domains": [
     "johnhofrichter.com",
@@ -41,7 +41,6 @@
     "grunt-ngmin": "^0.0.3",
     "grunt-shell-spawn": "~0.3.0",
     "grunt-simple-mocha": "^0.4.0",
-    "grunt-spritesmith": "^3.5.0",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "1.8.x",
