form validation update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "popa",
-  "version": "0.2.1",
+  "version": "0.2.1-1",
   "subdomain": "johnhof",
   "domains": [
     "johnhofrichter.com",
