added more structure

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "start": "node --harmony server/server"
   },
   "dependencies": {
+    "gulp": "^3.9.0",
+    "gulp-sass": "^2.0.4",
     "koa": "^0.21.0",
     "koa-bodyparser": "^2.0.0",
     "koa-logger": "^1.3.0",
     "koa-router": "^5.1.2",
-    "koa-send": "^1.3.1"
+    "koa-send": "^1.3.1",
+    "koa-static": "^1.4.9"
   },
   "engines": {
     "node": ">=0.12.7"
