--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "www.johnhofrichter.com"
   ],
   "scripts": {
-    "start": "node --harmony server/server"
+    "start": "babel-node --harmony --use-strict server/server"
   },
   "dependencies": {
+    "colors": "^1.1.2",
     "gulp": "^3.9.0",
+    "gulp-bower": "0.0.10",
+    "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.0.4",
+    "harmonize": "^1.4.4",
     "koa": "^0.21.0",
     "koa-bodyparser": "^2.0.0",
     "koa-logger": "^1.3.0",
     "koa-router": "^5.1.2",
     "koa-send": "^1.3.1",
-    "koa-static": "^1.4.9"
+    "koa-static": "^1.4.9",
+    "node-babel": "^0.1.2"
   },
   "engines": {
     "node": ">=0.12.7"
