--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "colors": "^1.1.2",
+    "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.10",
     "gulp-copy": "0.0.2",
@@ -23,7 +24,8 @@
     "koa-router": "^5.1.2",
     "koa-send": "^1.3.1",
     "koa-static": "^1.4.9",
-    "node-babel": "^0.1.2"
+    "node-babel": "^0.1.2",
+    "wiredep": "^2.2.2"
   },
   "engines": {
     "node": ">=0.12.7"
