--- a/package.json
+++ b/package.json
@@ -7,23 +7,28 @@
     "www.johnhofrichter.com"
   ],
   "scripts": {
-    "start": "babel-node --harmony --use-strict server/server"
+    "start": "babel-node --harmony server/server"
   },
   "dependencies": {
     "colors": "^1.1.2",
+    "defaults-deep": "^0.2.2",
     "del": "^1.2.0",
+    "github": "^0.2.4",
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.10",
     "gulp-copy": "0.0.2",
+    "gulp-exec": "^2.1.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.0.4",
     "harmonize": "^1.4.4",
     "koa": "^0.21.0",
     "koa-bodyparser": "^2.0.0",
     "koa-logger": "^1.3.0",
+    "koa-route": "^2.4.2",
     "koa-router": "^5.1.2",
     "koa-send": "^1.3.1",
     "koa-static": "^1.4.9",
+    "lodash": "^3.10.1",
     "node-babel": "^0.1.2",
     "wiredep": "^2.2.2"
   },
