--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "jquery": "~2.1.4",
-    "materialize": "~0.97.0"
+    "materialize": "~0.97.0",
+    "react": "~0.13.3"
   },
   "private": true
 }
