--- a/package.json
+++ b/package.json
@@ -1,57 +1,16 @@
 {
   "name": "popa",
-  "version": "1.0.7",
+  "version": "2.0.0",
   "subdomain": "johnhof",
   "domains": [
     "johnhofrichter.com",
     "www.johnhofrichter.com"
   ],
   "scripts": {
-    "start": "node server"
+    "start": "PORT=2013 node server"
   },
   "dependencies": {
-    "angular-resource": "^1.3.6",
-    "async": "^0.9.0",
-    "body-parser": "^1.10.2",
-    "colors": "~1.0.3",
-    "config.json": "0.0.x",
-    "connect": "~3.3.3",
-    "express": "^4.11.0",
-    "express-json": "^1.0.0",
-    "fs": "0.0.2",
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-cli": "~0.1.11",
-    "grunt-concat-in-order": "^0.1.6",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-compass": "^0.7.2",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
-    "grunt-google-cdn": "^0.4.0",
-    "grunt-newer": "^0.7.0",
-    "grunt-ngmin": "^0.0.3",
-    "grunt-shell-spawn": "~0.3.0",
-    "grunt-simple-mocha": "^0.4.0",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "1.8.x",
-    "joi": "^5.1.0",
-    "jshint-stylish": "^0.2.0",
-    "load-grunt-tasks": "^0.4.0",
-    "lodash": "^3.0.0",
-    "mongoman": "0.0.2",
-    "nodemailer": "^1.3.0",
-    "request": "^2.51.0",
-    "time-grunt": "^0.3.1"
+    "colors": "^1.1.2"
   },
   "engines": {
     "node": ">=0.10.0"
