--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "colors": "^1.1.2",
-    "forever": "^0.15.1"
+    "forever": "^0.15.1",
+    "koa": "^1.1.2",
+    "koa-logger": "^1.3.0",
+    "koa-static": "^2.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
