--- a/config.env
+++ b/config.env
@@ -1,8 +1,10 @@
+set -o allexport
+
 #
 # General configuation
 #
 
-export POPA_VERSION="3.0.0"
+POPA_VERSION="3.0.0"
 
 #
 # External configuration
@@ -14,12 +16,13 @@ export POPA_VERSION="3.0.0"
 # Backend configuration
 #
 
-export POPA_PORT=1991
+POPA_SERVER_PORT=1991
+POPA_CLIENT_PORT=8080
 
 #
 # Frontend configuration
 #
 
-export POPA_PUBLIC_PREFIX="public"
-export POPA_PUBLIC_DIR="$(pwd)/public"
-export POPA_LOG_ASSETS=false
+POPA_PUBLIC_PREFIX="public"
+POPA_PUBLIC_DIR="$(pwd)/public"
+POPA_LOG_ASSETS=false
