--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "style-loader": "^0.16.1"
   },
   "dependencies": {
     "html-webpack-plugin": "^2.28.0",
