--- a/config.env
+++ b/config.env
@@ -24,5 +24,5 @@ POPA_CLIENT_PORT=8080
 #
 
 POPA_PUBLIC_PREFIX="public"
-POPA_PUBLIC_DIR="$(pwd)/public"
+POPA_PUBLIC_DIR="$(pwd)/client/src/assets"
 POPA_LOG_ASSETS=false
