--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "style-loader": "^0.16.1"
   },
   "dependencies": {
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "path": "^0.12.7",
     "react": "^15.5.4",
