--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.0",
+    "mockery": "^2.0.0",
     "style-loader": "^0.16.1"
   },
   "dependencies": {
