--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,13 @@
     "style-loader": "^0.16.1"
   },
   "dependencies": {
+    "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "path": "^0.12.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-responsive": "^1.2.10",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
