--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "style-loader": "^0.16.1"
   },
   "dependencies": {
+    "event-emitter": "^0.3.5",
     "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "lodash": "^4.17.4",
     "path": "^0.12.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
