--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal One Page Application",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": ". ./config.env && cat ascii.txt && webpack-dev-server --port 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "John Hofrichter",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "event-emitter": "^0.3.5",
+    "extract-text-webpack-plugin": "^2.1.2",
     "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
