--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal One Page Application",
   "main": "index.js",
   "scripts": {
-    "start": ". ./config.env && cat ascii.txt && webpack-dev-server --port 8080",
+    "start": ". ./config.env && cat ascii.txt && webpack-dev-server --port 8080 --host 0.0.0.0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "John Hofrichter",
