--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,7 +1,7 @@
 FROM hypriot/rpi-node
 
 # Build phantomjs for arm
-RUN apk update && apk add --no-cache fontconfig curl \
+RUN apt-get update && apt-get add --no-cache fontconfig curl \
   && mkdir -p /usr/share \
   && cd /usr/share \
   && curl -L https://github.com/yangxuan8282/docker-image/releases/download/2.1.1/phantomjs-2.1.1-alpine-arm.tar.xz | tar xJ \
