--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install fontconfig curl \
   && cd /usr/share \
   && curl -L https://github.com/yangxuan8282/docker-image/releases/download/2.1.1/phantomjs-2.1.1-alpine-arm.tar.xz | tar xJ \
   && ln -s /usr/share/phantomjs/phantomjs /usr/bin/phantomjs \
+  && ls /usr/bin \
   && phantomjs --version
 
 # Create app directory
