--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,15 +1,5 @@
-FROM hypriot/rpi-node
-
-# Build phantomjs for arm
-ENV DEBIAN_FRONTEND noninteractive
-ENV PHANTOM_JS_VERSION 2.0.0
-
-RUN apt-get update && \
-  apt-get install -y build-essential g++ flex bison gperf ruby perl git-core \
-  libsqlite3-dev libfontconfig1-dev libicu-dev libfreetype6 libssl-dev \
-  libpng-dev libjpeg-dev ttf-mscorefonts-installer fontconfig chrpath openssl \
-  python-software-properties python-pip && \
-  rm -rf /var/lib/apt/lists/*
+# Use phantom JS rpi image which is on top of node rpi
+FROM ollihoo/phantomjs-docker-rpi
 
 # Create app directory
 RUN mkdir -p /usr/src/app
