--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -10,7 +10,7 @@ COPY yarn.lock /usr/src/app/
 COPY . /usr/src/app/
 
 WORKDIR /usr/src/app
-RUN yarn install
+RUN npm install -g yarn && yarn install
 
 EXPOSE 8080
 CMD ["npm", "start"]
