--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,5 +1,5 @@
 # Use phantom JS rpi image which is on top of node rpi
-FROM ollihoo/phantomjs-docker-rpi
+FROM cluster:5000/phantomjs-docker-rpi
 
 RUN echo $(node -v)
 
