--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -12,6 +12,7 @@ COPY yarn.lock /usr/src/app/
 COPY . /usr/src/app/
 
 WORKDIR /usr/src/app
+# RUN npm install -g yarn && yarn install
 RUN npm install -g yarn && yarn install
 
 EXPOSE 8080
