--- a/package.json
+++ b/package.json
@@ -4,33 +4,73 @@
   "description": "Personal One Page Application",
   "main": "index.js",
   "scripts": {
-    "start": ". ./config.env && cat ascii.txt && webpack-dev-server --port 8080 --host 0.0.0.0",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test",
+    "build": "node ./node_modules/.bin/neutrino build --use neutrino-preset-react",
+    "dev": "node ./node_modules/.bin/neutrino start --use neutrino-preset-react",
+    "prod": "node server.js",
+    "prestart": "npm run build",
+    "start": "node server.js"
+  },
+  "neutrino": {
+    "options": {
+      "html": {
+        "title": "John Hofrichter"
+      }
+    },
+    "entry": {
+      "index": [
+        "babel-polyfill"
+      ]
+    },
+    "config": {
+      "output": {
+        "publicPath": "/"
+      },
+      "devServer": {
+        "compress": true,
+        "host": "0.0.0.0",
+        "port": "8080",
+        "filename": "app/index.js",
+        "historyApiFallback": true,
+        "clientLogLevel": "none",
+        "noInfo": true,
+        "headers": {
+          "X-Note": "SWYgeW91J3JlIHJlYWRpbmcgdGhpcywgYXBwbHkgd2l0aCB1cyBhdCBoYXJ0LmNvbS9jYXJlZXJz",
+          "X-Powered-By": "Hart"
+        }
+      }
+    }
   },
   "author": "John Hofrichter",
   "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.0",
-    "mockery": "^2.0.0",
-    "style-loader": "^0.16.1"
-  },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "event-emitter": "^0.3.5",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "favicons-webpack-plugin": "^0.0.7",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
+    "flexboxgrid": "^6.3.1",
+    "koa": "^2.3.0",
+    "koa-helmet": "^3.2.0",
+    "koa-logger": "^3.0.0",
+    "koa-static": "^3.0.0",
     "lodash": "^4.17.4",
-    "path": "^0.12.7",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-responsive": "^1.2.10",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "morgan": "^1.8.1",
+    "neutrino": "^5.0.0",
+    "neutrino-preset-node": "^5.0.0",
+    "neutrino-preset-react": "^5.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-headroom": "^2.1.4",
+    "react-hot-loader": "next",
+    "react-number-format": "^1.1.2",
+    "react-particles-js": "^1.5.0",
+    "react-responsive": "^1.3.0",
+    "react-router-dom": "^4.0.0",
+    "react-waypoint": "^5.2.1",
+    "scroll-component": "^0.4.4"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "mz": "^2.6.0"
   }
 }
