more docker fun

--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,16 +1,14 @@
 # Use phantom JS rpi image which is on top of node rpi
 FROM registry:5000/phantomjs-docker-rpi
 
-# Create app directory
+# Copy over project
 RUN mkdir -p /usr/src/app
-
-# Install app dependencies
-COPY package.json /usr/src/app/
-COPY package-lock.json /usr/src/app/
-COPY . /usr/src/app/
-
 WORKDIR /usr/src/app
-RUN npm install
+COPY . .
+
+# Build app
+RUN npm install && \
+    npm run build
 
 EXPOSE 8080
-CMD ["npm", "start"]
+CMD ["npm", "run", "prod"]
